--- a/index.html
+++ b/index.html
@@ -300,10 +300,11 @@
       
       <div class="row">
         <div class="col-lg-12 text-center">
+          <strong>My other contacts:</strong>
           <table>
             <thead>
             <tr>
-            <th>Name</th>
+            <th>Service</th>
             <th>Account</th>
             </tr>
             </thead>
