--- a/index.html
+++ b/index.html
@@ -4,20 +4,6 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <!--
-    File: index.html
-    Jason Downing
-    Contact: jason@downing.io
-    MIT Licensed - see http://opensource.org/licenses/MIT for details.
-    Anyone may freely use this code. Just don't sue me if it breaks stuff.
-    Created: September 3rd, 2015.
-    Last Updated: November 13th, 2021.
-
-    Jason Downing's personal website. This site has information about him,
-    details about his education, skills, and links to his GitHub and LinkedIn
-    Profiles. This site is hosted on GitHub Pages.
-  -->
-
   <!-- Custom Title Bar -->
   <title>Botpsycho</title>
 
@@ -46,7 +32,7 @@
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-    ga('create', 'UA-68657454-1', 'auto');
+    ga('create', 'UA-234195970-1', 'auto');
     ga('send', 'pageview');
   </script>
 
@@ -60,15 +46,15 @@
 	https://developers.facebook.com/docs/sharing/webmasters/#markup
 	-->
 	<meta property="og:url"                content="https://downing.io/" />
-	<meta name="image" property="og:image" content="https://raw.githubusercontent.com/JasonD94/jasond94.github.io/master/img/header.jpg" />
+	<meta name="image" property="og:image" content="https://raw.githubusercontent.com/botpsycho/botpsycho.github.io/master/img/header.jpg" />
 	<meta property="og:image:alt"          content="A Deep Dreamed view of the Middlesex Fells Reservoir in Medford, MA" />
 	<meta property="g:locale"              content="en_US" />
 	<meta property="og:type"               content="website" />
-	<meta property="og:author"             content="Jason Downing" />
-	<meta property="og:title"              content="Jason Downing's Personal Website" />
-	<meta property="og:description"        content="This is Jason Downing's Personal Website, where he includes college projects, personal side projects and any professional or open source stuff" />
+	<meta property="og:author"             content="Botpsycho" />
+	<meta property="og:title"              content="Botpsycho's Personal Website" />
+	<meta property="og:description"        content="This is Botpsycho's Personal Website where he includes personal side projects and any professional or open source stuff" />
 	
-	<meta name="description" content="This is Jason Downing's Personal Website, where he includes college projects, personal side projects and any professional or open source stuff">
+	<meta name="description" content="This is Botpsycho's Personal Website personal side projects and any professional or open source stuff">
 
 </head>
 
@@ -266,7 +252,7 @@
   <section class="min-padding" id="contact">
     <div class="container">
     
-      <!-- Contact Jason Row -->
+      <!-- Contact Row -->
       <div class="row">
         <div class="col-lg-8 mx-auto text-center">
           <h2 class="section-heading">
@@ -292,7 +278,7 @@
             <input type="hidden" name="_next" value="thanks.html" />
             <!-- Submit button -->
             <div class="form-group">
-              <input type="submit" value="Email Jason" class="btn btn-primary btn-xl">
+              <input type="submit" value="Send" class="btn btn-primary btn-xl">
             </div>
           </form>
         </div>
