--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
             </tbody>
             </table>
 
-          <p>You can visit my main website by clicking <a href="https://botpsycho.netlify.com" class="text-blue">here</a></p>
+          <p>You can visit my main website by clicking <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0" class="text-blue">here</a></p>
         </div>
       </div>
       
