--- a/404.html
+++ b/404.html
@@ -40,12 +40,12 @@ permalink: /404.html
     <!-- 404 404 404 -->
     <div class="container">
 		<figure>
-		  <a href="https://www.youtube.com/watch?v=RE87rQkXdNw">
+		  <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0">
 			<img src="img/sad-marshmello.jpg" class="img-fluid" alt="sad face">
 		  </a>
 		  <figcaption class="text-center">
 		  <span class="font-weight-bold">404 - This page doesn't exist... ¯\_(ツ)_/¯</span> <br/>
-		  <a href="https://downing.io/">Try going home?<a> <br/>
+		  <a href="https://botpsycho.github.io/">Try going home?<a> <br/>
 		  [or click the image for a <span class="font-italic">happier</span> video]</figcaption>
 		</figure>
     </div>
