--- a/index.html
+++ b/index.html
@@ -323,6 +323,10 @@
             <td>Chess.com:</td>
             <td>Dr_Magician</td>
             </tr>
+   	    <tr>
+            <td>Instagram:</td>
+            <td>nileshkumarpahari</td>
+            </tr>
             </tbody>
             </table>
 
